parser/thrift.peg.go
// Code generated by peg. DO NOT EDIT.
package parser

// Code generated by peg ./thrift.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleDocument
	ruleHeader
	ruleInclude
	ruleCppInclude
	ruleNamespace
	ruleNamespaceScope
	ruleDefinition
	ruleConst
	ruleTypedef
	ruleEnum
	ruleService
	ruleStruct
	ruleUnion
	ruleException
	ruleField
	ruleFieldId
	ruleFieldReq
	ruleFunction
	ruleFunctionType
	ruleThrows
	ruleFieldType
	ruleBaseType
	ruleContainerType
	ruleMapType
	ruleSetType
	ruleListType
	ruleCppType
	ruleConstValue
	ruleIntConstant
	ruleDoubleConstant
	ruleExponent
	ruleAnnotations
	ruleAnnotation
	ruleConstList
	ruleConstMap
	ruleEscapeLiteralChar
	ruleLiteral
	ruleIdentifier
	ruleListSeparator
	ruleLetter
	ruleLetterOrDigit
	ruleDigit
	ruleReservedComments
	ruleReservedEndLineComments
	ruleSkip
	ruleSkipLine
	ruleSpace
	ruleIndent
	ruleCarriageReturnLineFeed
	ruleComment
	ruleLongComment
	ruleLineComment
	ruleUnixComment
	ruleEndComment
	ruleLongCommentNoReturn
	ruleLineCommentNoReturn
	ruleUnixCommentNoReturn
	ruleBOOL
	ruleBYTE
	ruleI8
	ruleI16
	ruleI32
	ruleI64
	ruleDOUBLE
	ruleSTRING
	ruleBINARY
	ruleCONST
	ruleONEWAY
	ruleTYPEDEF
	ruleMAP
	ruleSET
	ruleLIST
	ruleVOID
	ruleTHROWS
	ruleEXCEPTION
	ruleEXTENDS
	ruleSERVICE
	ruleSTRUCT
	ruleUNION
	ruleENUM
	ruleINCLUDE
	ruleCPPINCLUDE
	ruleNAMESPACE
	ruleCPPTYPE
	ruleLBRK
	ruleRBRK
	ruleLWING
	ruleRWING
	ruleEQUAL
	ruleLPOINT
	ruleRPOINT
	ruleCOMMA
	ruleLPAR
	ruleRPAR
	ruleCOLON
	rulePegText
)

var rul3s = [...]string{
	"Unknown",
	"Document",
	"Header",
	"Include",
	"CppInclude",
	"Namespace",
	"NamespaceScope",
	"Definition",
	"Const",
	"Typedef",
	"Enum",
	"Service",
	"Struct",
	"Union",
	"Exception",
	"Field",
	"FieldId",
	"FieldReq",
	"Function",
	"FunctionType",
	"Throws",
	"FieldType",
	"BaseType",
	"ContainerType",
	"MapType",
	"SetType",
	"ListType",
	"CppType",
	"ConstValue",
	"IntConstant",
	"DoubleConstant",
	"Exponent",
	"Annotations",
	"Annotation",
	"ConstList",
	"ConstMap",
	"EscapeLiteralChar",
	"Literal",
	"Identifier",
	"ListSeparator",
	"Letter",
	"LetterOrDigit",
	"Digit",
	"ReservedComments",
	"ReservedEndLineComments",
	"Skip",
	"SkipLine",
	"Space",
	"Indent",
	"CarriageReturnLineFeed",
	"Comment",
	"LongComment",
	"LineComment",
	"UnixComment",
	"EndComment",
	"LongCommentNoReturn",
	"LineCommentNoReturn",
	"UnixCommentNoReturn",
	"BOOL",
	"BYTE",
	"I8",
	"I16",
	"I32",
	"I64",
	"DOUBLE",
	"STRING",
	"BINARY",
	"CONST",
	"ONEWAY",
	"TYPEDEF",
	"MAP",
	"SET",
	"LIST",
	"VOID",
	"THROWS",
	"EXCEPTION",
	"EXTENDS",
	"SERVICE",
	"STRUCT",
	"UNION",
	"ENUM",
	"INCLUDE",
	"CPPINCLUDE",
	"NAMESPACE",
	"CPPTYPE",
	"LBRK",
	"RBRK",
	"LWING",
	"RWING",
	"EQUAL",
	"LPOINT",
	"RPOINT",
	"COMMA",
	"LPAR",
	"RPAR",
	"COLON",
	"PegText",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type ThriftIDL struct {
	Buffer string
	buffer []rune
	rules  [97]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *ThriftIDL) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *ThriftIDL) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *ThriftIDL
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *ThriftIDL) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *ThriftIDL) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *ThriftIDL) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*ThriftIDL) error {
	return func(p *ThriftIDL) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*ThriftIDL) error {
	return func(p *ThriftIDL) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *ThriftIDL) Init(options ...func(*ThriftIDL) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Document <- <(Header* Definition* Skip !.)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[ruleHeader]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
			l4:
				{
					position5, tokenIndex5 := position, tokenIndex
					if !_rules[ruleDefinition]() {
						goto l5
					}
					goto l4
				l5:
					position, tokenIndex = position5, tokenIndex5
				}
				if !_rules[ruleSkip]() {
					goto l0
				}
				{
					position6, tokenIndex6 := position, tokenIndex
					if !matchDot() {
						goto l6
					}
					goto l0
				l6:
					position, tokenIndex = position6, tokenIndex6
				}
				add(ruleDocument, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Header <- <(Skip (Include / CppInclude / Namespace) SkipLine)> */
		func() bool {
			position7, tokenIndex7 := position, tokenIndex
			{
				position8 := position
				if !_rules[ruleSkip]() {
					goto l7
				}
				{
					position9, tokenIndex9 := position, tokenIndex
					if !_rules[ruleInclude]() {
						goto l10
					}
					goto l9
				l10:
					position, tokenIndex = position9, tokenIndex9
					if !_rules[ruleCppInclude]() {
						goto l11
					}
					goto l9
				l11:
					position, tokenIndex = position9, tokenIndex9
					if !_rules[ruleNamespace]() {
						goto l7
					}
				}
			l9:
				if !_rules[ruleSkipLine]() {
					goto l7
				}
				add(ruleHeader, position8)
			}
			return true
		l7:
			position, tokenIndex = position7, tokenIndex7
			return false
		},
		/* 2 Include <- <(INCLUDE Literal)> */
		func() bool {
			position12, tokenIndex12 := position, tokenIndex
			{
				position13 := position
				if !_rules[ruleINCLUDE]() {
					goto l12
				}
				if !_rules[ruleLiteral]() {
					goto l12
				}
				add(ruleInclude, position13)
			}
			return true
		l12:
			position, tokenIndex = position12, tokenIndex12
			return false
		},
		/* 3 CppInclude <- <(CPPINCLUDE Literal)> */
		func() bool {
			position14, tokenIndex14 := position, tokenIndex
			{
				position15 := position
				if !_rules[ruleCPPINCLUDE]() {
					goto l14
				}
				if !_rules[ruleLiteral]() {
					goto l14
				}
				add(ruleCppInclude, position15)
			}
			return true
		l14:
			position, tokenIndex = position14, tokenIndex14
			return false
		},
		/* 4 Namespace <- <(NAMESPACE NamespaceScope Identifier Annotations?)> */
		func() bool {
			position16, tokenIndex16 := position, tokenIndex
			{
				position17 := position
				if !_rules[ruleNAMESPACE]() {
					goto l16
				}
				if !_rules[ruleNamespaceScope]() {
					goto l16
				}
				if !_rules[ruleIdentifier]() {
					goto l16
				}
				{
					position18, tokenIndex18 := position, tokenIndex
					if !_rules[ruleAnnotations]() {
						goto l18
					}
					goto l19
				l18:
					position, tokenIndex = position18, tokenIndex18
				}
			l19:
				add(ruleNamespace, position17)
			}
			return true
		l16:
			position, tokenIndex = position16, tokenIndex16
			return false
		},
		/* 5 NamespaceScope <- <((Skip <'*'> Indent*) / Identifier)> */
		func() bool {
			position20, tokenIndex20 := position, tokenIndex
			{
				position21 := position
				{
					position22, tokenIndex22 := position, tokenIndex
					if !_rules[ruleSkip]() {
						goto l23
					}
					{
						position24 := position
						if buffer[position] != rune('*') {
							goto l23
						}
						position++
						add(rulePegText, position24)
					}
				l25:
					{
						position26, tokenIndex26 := position, tokenIndex
						if !_rules[ruleIndent]() {
							goto l26
						}
						goto l25
					l26:
						position, tokenIndex = position26, tokenIndex26
					}
					goto l22
				l23:
					position, tokenIndex = position22, tokenIndex22
					if !_rules[ruleIdentifier]() {
						goto l20
					}
				}
			l22:
				add(ruleNamespaceScope, position21)
			}
			return true
		l20:
			position, tokenIndex = position20, tokenIndex20
			return false
		},
		/* 6 Definition <- <(ReservedComments Skip (Const / Typedef / Enum / Service / Struct / Union / Exception) Annotations? SkipLine)> */
		func() bool {
			position27, tokenIndex27 := position, tokenIndex
			{
				position28 := position
				if !_rules[ruleReservedComments]() {
					goto l27
				}
				if !_rules[ruleSkip]() {
					goto l27
				}
				{
					position29, tokenIndex29 := position, tokenIndex
					if !_rules[ruleConst]() {
						goto l30
					}
					goto l29
				l30:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleTypedef]() {
						goto l31
					}
					goto l29
				l31:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleEnum]() {
						goto l32
					}
					goto l29
				l32:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleService]() {
						goto l33
					}
					goto l29
				l33:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleStruct]() {
						goto l34
					}
					goto l29
				l34:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleUnion]() {
						goto l35
					}
					goto l29
				l35:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleException]() {
						goto l27
					}
				}
			l29:
				{
					position36, tokenIndex36 := position, tokenIndex
					if !_rules[ruleAnnotations]() {
						goto l36
					}
					goto l37
				l36:
					position, tokenIndex = position36, tokenIndex36
				}
			l37:
				if !_rules[ruleSkipLine]() {
					goto l27
				}
				add(ruleDefinition, position28)
			}
			return true
		l27:
			position, tokenIndex = position27, tokenIndex27
			return false
		},
		/* 7 Const <- <(CONST FieldType Identifier EQUAL ConstValue ListSeparator?)> */
		func() bool {
			position38, tokenIndex38 := position, tokenIndex
			{
				position39 := position
				if !_rules[ruleCONST]() {
					goto l38
				}
				if !_rules[ruleFieldType]() {
					goto l38
				}
				if !_rules[ruleIdentifier]() {
					goto l38
				}
				if !_rules[ruleEQUAL]() {
					goto l38
				}
				if !_rules[ruleConstValue]() {
					goto l38
				}
				{
					position40, tokenIndex40 := position, tokenIndex
					if !_rules[ruleListSeparator]() {
						goto l40
					}
					goto l41
				l40:
					position, tokenIndex = position40, tokenIndex40
				}
			l41:
				add(ruleConst, position39)
			}
			return true
		l38:
			position, tokenIndex = position38, tokenIndex38
			return false
		},
		/* 8 Typedef <- <(TYPEDEF FieldType Identifier)> */
		func() bool {
			position42, tokenIndex42 := position, tokenIndex
			{
				position43 := position
				if !_rules[ruleTYPEDEF]() {
					goto l42
				}
				if !_rules[ruleFieldType]() {
					goto l42
				}
				if !_rules[ruleIdentifier]() {
					goto l42
				}
				add(ruleTypedef, position43)
			}
			return true
		l42:
			position, tokenIndex = position42, tokenIndex42
			return false
		},
		/* 9 Enum <- <(ENUM Identifier LWING (ReservedComments Identifier (EQUAL IntConstant)? Annotations? ListSeparator? ReservedEndLineComments SkipLine)* RWING)> */
		func() bool {
			position44, tokenIndex44 := position, tokenIndex
			{
				position45 := position
				if !_rules[ruleENUM]() {
					goto l44
				}
				if !_rules[ruleIdentifier]() {
					goto l44
				}
				if !_rules[ruleLWING]() {
					goto l44
				}
			l46:
				{
					position47, tokenIndex47 := position, tokenIndex
					if !_rules[ruleReservedComments]() {
						goto l47
					}
					if !_rules[ruleIdentifier]() {
						goto l47
					}
					{
						position48, tokenIndex48 := position, tokenIndex
						if !_rules[ruleEQUAL]() {
							goto l48
						}
						if !_rules[ruleIntConstant]() {
							goto l48
						}
						goto l49
					l48:
						position, tokenIndex = position48, tokenIndex48
					}
				l49:
					{
						position50, tokenIndex50 := position, tokenIndex
						if !_rules[ruleAnnotations]() {
							goto l50
						}
						goto l51
					l50:
						position, tokenIndex = position50, tokenIndex50
					}
				l51:
					{
						position52, tokenIndex52 := position, tokenIndex
						if !_rules[ruleListSeparator]() {
							goto l52
						}
						goto l53
					l52:
						position, tokenIndex = position52, tokenIndex52
					}
				l53:
					if !_rules[ruleReservedEndLineComments]() {
						goto l47
					}
					if !_rules[ruleSkipLine]() {
						goto l47
					}
					goto l46
				l47:
					position, tokenIndex = position47, tokenIndex47
				}
				if !_rules[ruleRWING]() {
					goto l44
				}
				add(ruleEnum, position45)
			}
			return true
		l44:
			position, tokenIndex = position44, tokenIndex44
			return false
		},
		/* 10 Service <- <(SERVICE Identifier (EXTENDS Identifier)? LWING Function* RWING Annotations?)> */
		func() bool {
			position54, tokenIndex54 := position, tokenIndex
			{
				position55 := position
				if !_rules[ruleSERVICE]() {
					goto l54
				}
				if !_rules[ruleIdentifier]() {
					goto l54
				}
				{
					position56, tokenIndex56 := position, tokenIndex
					if !_rules[ruleEXTENDS]() {
						goto l56
					}
					if !_rules[ruleIdentifier]() {
						goto l56
					}
					goto l57
				l56:
					position, tokenIndex = position56, tokenIndex56
				}
			l57:
				if !_rules[ruleLWING]() {
					goto l54
				}
			l58:
				{
					position59, tokenIndex59 := position, tokenIndex
					if !_rules[ruleFunction]() {
						goto l59
					}
					goto l58
				l59:
					position, tokenIndex = position59, tokenIndex59
				}
				if !_rules[ruleRWING]() {
					goto l54
				}
				{
					position60, tokenIndex60 := position, tokenIndex
					if !_rules[ruleAnnotations]() {
						goto l60
					}
					goto l61
				l60:
					position, tokenIndex = position60, tokenIndex60
				}
			l61:
				add(ruleService, position55)
			}
			return true
		l54:
			position, tokenIndex = position54, tokenIndex54
			return false
		},
		/* 11 Struct <- <(STRUCT Identifier LWING Field* RWING)> */
		func() bool {
			position62, tokenIndex62 := position, tokenIndex
			{
				position63 := position
				if !_rules[ruleSTRUCT]() {
					goto l62
				}
				if !_rules[ruleIdentifier]() {
					goto l62
				}
				if !_rules[ruleLWING]() {
					goto l62
				}
			l64:
				{
					position65, tokenIndex65 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l65
					}
					goto l64
				l65:
					position, tokenIndex = position65, tokenIndex65
				}
				if !_rules[ruleRWING]() {
					goto l62
				}
				add(ruleStruct, position63)
			}
			return true
		l62:
			position, tokenIndex = position62, tokenIndex62
			return false
		},
		/* 12 Union <- <(UNION Identifier LWING Field* RWING)> */
		func() bool {
			position66, tokenIndex66 := position, tokenIndex
			{
				position67 := position
				if !_rules[ruleUNION]() {
					goto l66
				}
				if !_rules[ruleIdentifier]() {
					goto l66
				}
				if !_rules[ruleLWING]() {
					goto l66
				}
			l68:
				{
					position69, tokenIndex69 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l69
					}
					goto l68
				l69:
					position, tokenIndex = position69, tokenIndex69
				}
				if !_rules[ruleRWING]() {
					goto l66
				}
				add(ruleUnion, position67)
			}
			return true
		l66:
			position, tokenIndex = position66, tokenIndex66
			return false
		},
		/* 13 Exception <- <(EXCEPTION Identifier LWING Field* RWING)> */
		func() bool {
			position70, tokenIndex70 := position, tokenIndex
			{
				position71 := position
				if !_rules[ruleEXCEPTION]() {
					goto l70
				}
				if !_rules[ruleIdentifier]() {
					goto l70
				}
				if !_rules[ruleLWING]() {
					goto l70
				}
			l72:
				{
					position73, tokenIndex73 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l73
					}
					goto l72
				l73:
					position, tokenIndex = position73, tokenIndex73
				}
				if !_rules[ruleRWING]() {
					goto l70
				}
				add(ruleException, position71)
			}
			return true
		l70:
			position, tokenIndex = position70, tokenIndex70
			return false
		},
		/* 14 Field <- <(ReservedComments Skip FieldId? FieldReq? FieldType Identifier (EQUAL ConstValue)? Annotations? ListSeparator? ReservedEndLineComments SkipLine)> */
		func() bool {
			position74, tokenIndex74 := position, tokenIndex
			{
				position75 := position
				if !_rules[ruleReservedComments]() {
					goto l74
				}
				if !_rules[ruleSkip]() {
					goto l74
				}
				{
					position76, tokenIndex76 := position, tokenIndex
					if !_rules[ruleFieldId]() {
						goto l76
					}
					goto l77
				l76:
					position, tokenIndex = position76, tokenIndex76
				}
			l77:
				{
					position78, tokenIndex78 := position, tokenIndex
					if !_rules[ruleFieldReq]() {
						goto l78
					}
					goto l79
				l78:
					position, tokenIndex = position78, tokenIndex78
				}
			l79:
				if !_rules[ruleFieldType]() {
					goto l74
				}
				if !_rules[ruleIdentifier]() {
					goto l74
				}
				{
					position80, tokenIndex80 := position, tokenIndex
					if !_rules[ruleEQUAL]() {
						goto l80
					}
					if !_rules[ruleConstValue]() {
						goto l80
					}
					goto l81
				l80:
					position, tokenIndex = position80, tokenIndex80
				}
			l81:
				{
					position82, tokenIndex82 := position, tokenIndex
					if !_rules[ruleAnnotations]() {
						goto l82
					}
					goto l83
				l82:
					position, tokenIndex = position82, tokenIndex82
				}
			l83:
				{
					position84, tokenIndex84 := position, tokenIndex
					if !_rules[ruleListSeparator]() {
						goto l84
					}
					goto l85
				l84:
					position, tokenIndex = position84, tokenIndex84
				}
			l85:
				if !_rules[ruleReservedEndLineComments]() {
					goto l74
				}
				if !_rules[ruleSkipLine]() {
					goto l74
				}
				add(ruleField, position75)
			}
			return true
		l74:
			position, tokenIndex = position74, tokenIndex74
			return false
		},
		/* 15 FieldId <- <(Skip IntConstant COLON Indent*)> */
		func() bool {
			position86, tokenIndex86 := position, tokenIndex
			{
				position87 := position
				if !_rules[ruleSkip]() {
					goto l86
				}
				if !_rules[ruleIntConstant]() {
					goto l86
				}
				if !_rules[ruleCOLON]() {
					goto l86
				}
			l88:
				{
					position89, tokenIndex89 := position, tokenIndex
					if !_rules[ruleIndent]() {
						goto l89
					}
					goto l88
				l89:
					position, tokenIndex = position89, tokenIndex89
				}
				add(ruleFieldId, position87)
			}
			return true
		l86:
			position, tokenIndex = position86, tokenIndex86
			return false
		},
		/* 16 FieldReq <- <(Skip <(('r' 'e' 'q' 'u' 'i' 'r' 'e' 'd') / ('o' 'p' 't' 'i' 'o' 'n' 'a' 'l'))> Indent*)> */
		func() bool {
			position90, tokenIndex90 := position, tokenIndex
			{
				position91 := position
				if !_rules[ruleSkip]() {
					goto l90
				}
				{
					position92 := position
					{
						position93, tokenIndex93 := position, tokenIndex
						if buffer[position] != rune('r') {
							goto l94
						}
						position++
						if buffer[position] != rune('e') {
							goto l94
						}
						position++
						if buffer[position] != rune('q') {
							goto l94
						}
						position++
						if buffer[position] != rune('u') {
							goto l94
						}
						position++
						if buffer[position] != rune('i') {
							goto l94
						}
						position++
						if buffer[position] != rune('r') {
							goto l94
						}
						position++
						if buffer[position] != rune('e') {
							goto l94
						}
						position++
						if buffer[position] != rune('d') {
							goto l94
						}
						position++
						goto l93
					l94:
						position, tokenIndex = position93, tokenIndex93
						if buffer[position] != rune('o') {
							goto l90
						}
						position++
						if buffer[position] != rune('p') {
							goto l90
						}
						position++
